[+] Обновлены и реализованы методы /getAllPosts, /addPosts и /delPosts. Данные методы позволяют соответственно получать список всех должностей, добавлять должности в список и удалять должности из списка.
